test/libsolidity/syntaxTests/freeFunctions/free_constructor.sol
constructor() {}
// ----
// ParserError 7858: (0-11): Expected pragma, import directive or contract/interface/library/struct/enum/constant/function/error definition.
